--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <profile>
       <id>book_covers</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
         <spring.profiles.active>book_covers</spring.profiles.active>
@@ -74,6 +74,9 @@
     </profile>
     <profile>
       <id>author_avatars</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
       <properties>
         <spring.profiles.active>author_avatars</spring.profiles.active>
       </properties>
