final mock specific generators

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=@spring.profiles.active@
+spring.profiles.active=publishers
 server.port=${PORT:8080}
 #logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.default_schema=lituralia
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+logging.level.root=INFO
